added loading animation to pending stories
