# src/lib/api/models/StoryDetailsResponse.ts
@@ -3,10 +3,12 @@
 /* tslint:disable */
 /* eslint-disable */
 import type { ImageResponse } from './ImageResponse';
+import type { StoryState } from './StoryState';
 export type StoryDetailsResponse = {
     storyId: string;
     storyName: string;
     storyText: string;
+    state: StoryState;
     storyImages: Array<ImageResponse>;
 };
 
